--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h1 class="mytitle">Video kurs haqida to`liq ma`lumot olish uchun BATAFSIL tugmasini bosing</h1>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/W1.png" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Corel Draw</h5>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/W2.png" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Premiere</h5>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/Без названия.png" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Photoshop</h5>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/W4.png" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Power Point</h5>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/Infobiznes.webp" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Infobiznes</h5>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/Excel1.webp" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Excell</h5>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/3D Max.webp" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">3D Max</h5>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/Autocad.webp" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Autocad</h5>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/Word.webp" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Word</h5>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/1C.webp" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">1C</h5>
@@ -160,7 +160,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/Autodesk maya.webp" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Autodesk</h5>
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 text-center mt-4">
-                    <div class="card align-items-center" style="width: 18rem;">
+                    <div class="card align-items-center">
                         <img src="img/SMM.webp" class="card-img-top mt-5" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">SMM</h5>
